# J60SDK-ROS2

./: Readme.md  set_up_can.sh
install/: local_setup.sh  setup.sh
install/j60controller/lib/j60controller/: j60master  j60reader
install/j60controller/share/j60controller/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/j60interfaces/include/j60interfaces/j60interfaces/msg/: move_j60.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h
install/j60interfaces/include/j60interfaces/j60interfaces/msg/detail/: move_j60__rosidl_typesupport_fastrtps_c.h  move_j60__rosidl_typesupport_fastrtps_cpp.hpp  move_j60__rosidl_typesupport_introspection_cpp.hpp  move_j60__struct.h  move_j60__struct.hpp  move_j60__traits.hpp  move_j60__type_support.h  move_j60__type_support.hpp  state_j60__functions.c  state_j60__rosidl_typesupport_introspection_cpp.hpp  state_j60__struct.h  state_j60__type_support.c  state_j60__type_support.cpp  state_j60__type_support.hpp
install/j60interfaces/share/ament_index/resource_index/rosidl_interfaces/: j60interfaces
install/j60interfaces/share/j60interfaces/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/j60interfaces/share/j60interfaces/cmake/: ament_cmake_export_libraries-extras.cmake  export_j60interfaces__rosidl_generator_cExport-noconfig.cmake  export_j60interfaces__rosidl_generator_cExport.cmake  export_j60interfaces__rosidl_generator_cppExport.cmake  export_j60interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_j60interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  j60interfaces__rosidl_typesupport_cExport.cmake  j60interfaces__rosidl_typesupport_introspection_cppExport.cmake
install/j60interfaces/share/j60interfaces/msg/: MoveJ60.idl  MoveJ60.msg  StateJ60.msg
log/: latest_build
src/j60controller/: CMakeLists.txt
src/j60controller/include/j60controller/: Mymaster.hpp  deep_motor_sdk.h  reader.hpp
src/j60controller/src/: Mymaster.cpp  deep_motor_sdk.cpp  j60master.cpp  j60reader.cpp  reader.cpp
src/j60interfaces/: CMakeLists.txt
(+7 files in other folders)
